Corrected minor spacing issue in tablet header and contact sections

--- a/css/index.css
+++ b/css/index.css
@@ -106,6 +106,7 @@ header nav {
         width: 100%;
         justify-content: space-between;
         padding-right: 40px;
+        padding-left: 10px;
     }
 }
 
@@ -116,6 +117,7 @@ header nav {
         flex-direction: column;
         align-items: center;
         padding-right: 0;
+        padding-left: 0;
     }
 }
 
@@ -288,6 +290,17 @@ header .logo {
 
 .contact p {
     margin: 15px 0;
+}
+
+@media (max-width: 880px) {
+    .contact {
+        padding: 0 10px;
+    }
+}
+@media (max-width: 550px) {
+    .contact {
+        padding: 0;
+    }
 }
 
 /* Footer Styles */
